recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:12: error: '<-' expected but ')' found.
  for (i-> 0 to 3) {
                 ^FourSquare:16: error: illegal start of simple expression
} 
^